--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -2,23 +2,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: var(--size-16);
     padding: var(--size-6) var(--size-4);
     border-radius: var(--rounded-md);
     background: var(--color-gray-900);
+    gap: var(--size-4);
 }
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: var(--size-4);
+    gap: var(--size-7);
 }
 
 .form-action {
     width: 100%;
     display: flex;
+    margin-top: var(--size-8);
     align-items: flex-end;
     justify-content: end;
     gap: var(--size-4);
+}
+
+.form-title {
+    font-size: var(--font-xl);
+    font-weight: 700;
 }
