change rendering of property ref correctly handle finding content by group path, finish content form

--- a/src/components/content-builder/styles.module.css
+++ b/src/components/content-builder/styles.module.css
@@ -1,16 +1,22 @@
 .property-box {
-    padding: var(--size-4) var(--size-6);
-    background-color: var(--color-gray-400);
+    padding: var(--size-4);
+    border: 2px dotted var(--color-gray-400);
     border-radius: var(--rounded-md);
+}
+.group-renderer {
+    text-align: left;
+}
+.group-renderer__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .group-box {
-    padding: var(--size-4) var(--size-6);
+    padding: 5px;       
     border: 2px solid var(--color-gray-400);
     border-radius: var(--rounded-md);
     display: grid;
-    place-content: center;
-    place-items: center;
 }
 
 .group {
