--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -51,5 +51,6 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    gap: var(--size-1);
+    padding: var(--size-3) 0;
+    gap: var(--size-2);
 }
