--- a/renderer/styles/global.css
+++ b/renderer/styles/global.css
@@ -1,5 +1,3 @@
-@import url('./components.css');
-
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
@@ -494,4 +492,68 @@ video {
 
 :focus {
     outline: none;
+}
+
+/* BUTTON */
+
+.button {
+    font-weight: bold;
+    font-size: 0.875rem;
+    background-color: var(--color-blue-500);
+    padding: 12px 24px;
+    border-radius: 12px;
+    color: white;
+    transition: all 150ms ease;
+    cursor: pointer;
+    border: none;
+}
+
+.button:hover {
+    background-color: var(--color-blue-600);
+}
+
+/* MODAL */
+
+.modal-backdrop {
+    z-index: -1;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1300;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* INPUT */
+
+.input {
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: var(--size-2) var(--size-4);
+    border-radius: var(--rounded-sm);
+    color: var(--color-gray-300);
+    background-color: var(--color-gray-800);
+}
+.input:hover {
+    border-color: var(--color-blue-400);
+}
+.input:focus {
+    border-color: var(--color-blue-400);
+}
+.input:focus-visible {
+    outline: 0;
 }
